# TinyCraft

./: .gitignore  CMakeLists.txt  README.MD
assets/shaders/: background_f.glsl  background_v.glsl  block_f.glsl  block_v.glsl  wireframe_f.glsl  wireframe_v.glsl
src/: camera.hpp  chunk.cpp  chunk.hpp  cube.cpp  cube.hpp  db.cpp  db.hpp  define.hpp  game.cpp  game.hpp  geometry.hpp  item.cpp  item.hpp  main.cpp  map.cpp  map.hpp  math.hpp  player.cpp  player.hpp  ray.hpp  shader_program.hpp  util.hpp
